# packman

./: CMakeLists.txt  LICENSE  README.md  build.sh  cmake.sh  setup.sh
res/levels/: example.txt
src/: CMakeLists.txt  main.cpp
src/content/: Dot.cpp  Dot.h  Ghost.cpp  Ghost.h  Packman.cpp  Packman.h  Wall.cpp  Wall.h
src/gamelogic/: Actor.cpp  Actor.h  Entity.h  Level.cpp  Level.h  Tile.cpp  Tile.h
src/states/: Base_state.cpp  Base_state.h  Ingame_state.cpp  Ingame_state.h  Splash_state.cpp  Splash_state.h  State_manager.cpp  State_manager.h
src/utils/: Globals.hpp  Tee.hpp  receiver_tree_manipulation.hpp  tile_rectangle.hpp  typedefs.hpp
